# amc-grad

./: .gitignore  Cargo.toml  LICENSE.md  README.md  pyproject.toml
aaai/: README.md  benchmark_jax.py  benchmark_kompyle.py  benchmark_torch.py
kompyle/: __init__.py  torch_tools.py  utils.py
src/: lib.rs
src/algebra/: bool.rs  circuit.rs  float.rs  fuzzy.rs  int.rs  log.rs  mod.rs  signed_log.rs  utils.rs
src/circuit/: amc.rs  circuit.rs  compile.rs  mod.rs  parser.rs  rcircuit.rs  tseitin.rs  weights.rs
