[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "kompyle"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
authors = [
  {email = "jaron.maene@kuleuven.be"},
  {name = "Jaron Maene"}
]

[project.optional-dependencies]
torch = ["torch>=2.0.0"]
